fixing gif issue on mobile

--- a/sass/layouts/_main.sass
+++ b/sass/layouts/_main.sass
@@ -24,14 +24,15 @@
     width: 740px
   @media only screen and (max-width : 767px)
     width: 460px
+    padding-left: 10px
+    padding-right: 10px
   @media only screen and (max-width : 479px)
     width: 100%
 .main__img
   width: 100%
   margin-bottom: 20px
   @media only screen and (max-width : 767px)
-    margin-bottom: 25px
-    display: none
+    margin: 0 20px 25px 20px
 .main__title
   +font(104px, $font-rozhaone, 700)
   color: $black
